<resources>
    <string name="app_name">Clinica Univirtus</string>
    <string name="cadastro">Cadastro de paciente</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirme_senha">Confirme a senha</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="uf">UF</string>
    <string name="cep">CEP</string>
    <string name="botaoCadastro">Cadastrar</string>
    <string name="ja_possui_conta">Já tem uma conta?</string>
    <string name="conectado">Manter conectado</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tem_conta">Não tem uma conta?</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="paciente">Paciente</string>
    <string name="sair">Sair</string>
    <string name="contato">Contato</string>
    <string name="agendar">Agendar</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="cadastro_login">Cadastre-se</string>
    <string name="hint_senha">ex. 123456</string>
    <string name="faca_login">Fazer Login</string>
    <string name="logo_transparente">Logo transparente no background</string>
    <string name="logo_icon">Ícone de logo</string>
    <string name="entre_contato">Entre em contato conosco</string>
    <string name="diaAtendimento">Segunda à Sexta, 08h00 às 18h00</string>
    <string name="num_telefone">(11) 99000-0000</string>
    <string name="email_contato">contato@univirtus.com.br</string>
    <string name="email_respondemos">Responderemos em até 24 horas</string>
    <string name="rua_contato">Rua da Esperança, 123</string>
    <string name="bairro_estado_contato">Centro, Coritiba - PR</string>
    <string name="cep_contato">CEP: 01234-567</string>
    <string name="horarios_atendimento">Horários de atendimento</string>
    <string name="seg_sexta">Segunda à sexta</string>
    <string name="hora_atendimento">08h às 18h</string>
    <string name="sabado_atendimento">Sábado</string>
    <string name="domingo_atendimento">Domingo</string>
    <string name="titulo_agendamentos">Meus Agendamentos</string>
    <string name="remarcar">Remarcar</string>
    <string name="cancelar">Cancelar</string>
    <string name="data">Data: 24/08</string>
    <string name="horario">Horário: 15:00</string>
    <string name="especialidade">Especialidade</string>
    <string name="medico">Médico</string>
    <string name="hora_atendimento_sabado">08h às 12h</string>
    <string name="hora_atendimento_domingo">fechado</string>
    <string name="desenvolvido_por">Desenvolvido por:</string>
    <string name="email_text">Respondemos em até 24 hrs</string>
</resources>