<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:padding="12dp"
    tools:context=".ContactActivity">

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logov2_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:text="@string/contato"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logo_app"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/txt_entre_contato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entre_contato"
                android:textSize="18sp"
                android:paddingBottom="26dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp" >

            <ImageView
                android:id="@+id/icone_telefone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icone_call" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp" >

            <TextView
                android:id="@+id/txt_numero_contato"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:text="@string/num_telefone"/>
            <TextView
                android:id="@+id/txt_horarios_atendimento"
                android:text="@string/diaAtendimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

        </LinearLayout>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_email"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/email_contato"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/email_contato"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_map_pin"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rua_contato"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/bairro_estado_contato"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/cep_contato"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="26dp"
            android:textStyle="bold"
            android:text="@string/horarios_atendimento" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp" >
                
                <TextView
                    android:layout_width="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@string/seg_sexta"
                    android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hora_atendimento" />
                
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sabado_atendimento"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora_atendimento"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@string/domingo_atendimento"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora_atendimento"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>







</androidx.constraintlayout.widget.ConstraintLayout>