<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendamentosActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >


            <ImageView
                android:id="@+id/logo_app"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/logov2_app" />

            <TextView
                android:id="@+id/txt_header_agendamentos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/titulo_agendamentos"
                android:textSize="22sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:elevation="2dp"

        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" >
<LinearLayout
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_data"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/data" />

        <EditText
            android:id="@+id/edit_horario"
            android:layout_width="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/horario" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_especialidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:hint="@string/especialidade" />

        <EditText
            android:id="@+id/edit_nomeMedico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:hint="@string/medico" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_remarcar"
            android:layout_width="0dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:shadowRadius="2"

            android:backgroundTint="@color/green"
            android:layout_height="wrap_content"
            android:text="@string/remarcar" />

        <Button

            android:id="@+id/btn_cancelar"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancelar"
            android:shadowRadius="2"
            android:textColor="@color/redv2"
            app:strokeColor="@color/redv2"
            app:strokeWidth="1dp" />
    </LinearLayout>
</LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-1dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
           >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icone_telefone"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/icone_call" />
                 <TextView
                     android:id="@+id/txt_telefone"
                     android:layout_width="wrap_content"
                     android:textSize="14sp"
                     android:layout_height="wrap_content"
                     android:text="@string/contato" />



        </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icone_agendar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/icone_calendar_add" />
                <TextView
                    android:id="@+id/txt_agendar"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:text="@string/agendar" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icone_agendamentos"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/icone_calendar_check" />

                <TextView
                    android:id="@+id/txt_agendamentos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agendamentos"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>